--- a/3-column-count/src/styles/output.css
+++ b/3-column-count/src/styles/output.css
@@ -540,10 +540,6 @@ video {
   height: 8rem;
 }
 
-.h-\[50vh\]{
-  height: 50vh;
-}
-
 .h-max{
   height: -moz-max-content;
   height: max-content;
@@ -553,40 +549,24 @@ video {
   height: 100vh;
 }
 
-.min-h-\[600px\]{
-  min-height: 600px;
-}
-
-.min-h-\[800px\]{
-  min-height: 800px;
-}
-
 .min-h-\[300px\]{
   min-height: 300px;
+}
+
+.min-h-\[600px\]{
+  min-height: 600px;
 }
 
 .w-11\/12{
   width: 91.666667%;
 }
 
-.w-16{
-  width: 4rem;
+.w-20{
+  width: 5rem;
 }
 
 .w-3\/4{
   width: 75%;
-}
-
-.w-48{
-  width: 12rem;
-}
-
-.w-24{
-  width: 6rem;
-}
-
-.w-20{
-  width: 5rem;
 }
 
 .w-max{
@@ -594,24 +574,70 @@ video {
   width: max-content;
 }
 
-.max-w-\[300px\]{
-  max-width: 300px;
+.w-16{
+  width: 4rem;
 }
 
-.max-w-\[1000px\]{
-  max-width: 1000px;
+.w-14{
+  width: 3.5rem;
 }
 
 .max-w-\[1200px\]{
   max-width: 1200px;
 }
 
-.max-w-\[330px\]{
-  max-width: 330px;
-}
-
 .max-w-\[350px\]{
   max-width: 350px;
+}
+
+.-rotate-45{
+  --tw-rotate: -45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-y-50{
+  --tw-scale-y: .5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-y-150{
+  --tw-scale-y: 1.5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-y-125{
+  --tw-scale-y: 1.25;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-x-0{
+  --tw-scale-x: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-x-105{
+  --tw-scale-x: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-y-\[200\]{
+  --tw-scale-y: 200;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-y-\[1\.5\]{
+  --tw-scale-y: 1.5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-y-\[2\]{
+  --tw-scale-y: 2;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-y-\[2\.5\]{
+  --tw-scale-y: 2.5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .flex-row{
@@ -624,14 +650,6 @@ video {
 
 .items-center{
   align-items: center;
-}
-
-.justify-center{
-  justify-content: center;
-}
-
-.justify-items-center{
-  justify-items: center;
 }
 
 .space-y-8 > :not([hidden]) ~ :not([hidden]){
@@ -686,14 +704,6 @@ video {
   background-color: rgb(244 244 245 / var(--tw-bg-opacity));
 }
 
-.p-8{
-  padding: 2rem;
-}
-
-.p-12{
-  padding: 3rem;
-}
-
 .p-14{
   padding: 3.5rem;
 }
@@ -708,18 +718,14 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
 
-.pb-3{
-  padding-bottom: 0.75rem;
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-lg{
@@ -727,9 +733,13 @@ video {
   line-height: 1.75rem;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.font-medium{
+  font-weight: 500;
 }
 
 .font-semibold{
@@ -740,16 +750,20 @@ video {
   font-weight: 700;
 }
 
-.font-medium{
-  font-weight: 500;
-}
-
 .uppercase{
   text-transform: uppercase;
 }
 
 .leading-8{
   line-height: 2rem;
+}
+
+.tracking-tight{
+  letter-spacing: -0.025em;
+}
+
+.tracking-tighter{
+  letter-spacing: -0.05em;
 }
 
 .text-\[\#004241\]{
@@ -811,18 +825,6 @@ video {
 @media (min-width: 768px){
   .md\:flex-row{
     flex-direction: row;
-  }
-
-  .md\:flex-col{
-    flex-direction: column;
-  }
-
-  .md\:content-center{
-    align-content: center;
-  }
-
-  .md\:items-center{
-    align-items: center;
   }
 
   .md\:justify-center{
